--- a/k8s-operator/minecraft-crd.yaml
+++ b/k8s-operator/minecraft-crd.yaml
@@ -23,4 +23,4 @@ spec:
                 server-name:
                   type: string
                 player-count:
-                  type: int
+                  type: integer  
