CHG: cloud init and try to fix operator kubeconfig

--- a/k8s-operator/operator-deployment.yaml
+++ b/k8s-operator/operator-deployment.yaml
@@ -15,3 +15,6 @@ spec:
       containers:
       - name: minecraft-operator
         image: localhost:5000/minecraft-operator-image
+        env:
+        - name: KUBECONFIG
+          value: /root/.kube/config
