CHG: WIP try to fix operator

--- a/k8s-operator/Dockerfile
+++ b/k8s-operator/Dockerfile
@@ -6,5 +6,6 @@ COPY requirements.txt .
 RUN pip install -r /app/requirements.txt
 
 COPY provider-operator.py .
+COPY minecraft-crd.yaml .
 
 CMD ["python", "/app/provider-operator.py"]
