--- a/k8s-operator/operator-deployment.yaml
+++ b/k8s-operator/operator-deployment.yaml
@@ -15,6 +15,13 @@ spec:
       containers:
       - name: minecraft-operator
         image: localhost:5000/minecraft-operator-image
+        volumeMounts:
+        - name: kubeconfig-volume
+          mountPath: /root/.kube
         env:
         - name: KUBECONFIG
           value: /root/.kube/config
+      volumes:
+      - name: kubeconfig-volume
+        hostPath:
+          path: /root/.kube
