--- a/helm/minecraft/templates/service-nodeport.yaml
+++ b/helm/minecraft/templates/service-nodeport.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: minecraft-server
+  name: {{ printf "minecraft-server-%s" .Values.minecraft.motd }}
   namespace: minecraft
   labels:
-    app: minecraft-server
+    app: {{ printf "minecraft-server-%s" .Values.minecraft.motd }}
 spec:
   type: NodePort
   ports:
     - port: {{ .Values.minecraft.internal_port }}
       nodePort: {{ .Values.minecraft.exposed_port }}
   selector:
-    app: minecraft-server
+    app: {{ printf "minecraft-server-%s" .Values.minecraft.motd }}
