--- a/helm/minecraft/templates/volume-claim.yaml
+++ b/helm/minecraft/templates/volume-claim.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: minecraft-data-pvc
+  name: {{ printf "minecraft-data-pvc-%s" .Values.minecraft.motd }}
   namespace: minecraft
 spec:
   storageClassName: local-storage
