--- a/helm/minecraft/templates/volume.yaml
+++ b/helm/minecraft/templates/volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: minecraft-data
+  name: {{ printf "minecraft-data-%s" .Values.minecraft.motd }}
   namespace: minecraft
 spec:
   capacity:
